# StarterRepo

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
core/Core_Config/utils/: collections.py  misc.py  settings.py
core/core/: asgi.py  urls.py  wsgi.py
core/core/settings/: Databases.py  __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/core/settings/templates/: settings.dev.py
scripts/: entrypoint.sh
